--- a/src/app/shared/components/login-form/login-form.component.scss
+++ b/src/app/shared/components/login-form/login-form.component.scss
@@ -1,6 +1,5 @@
 @import "../../../../themes/generated/variables.base.scss";
 
-//  background-color: rgba(255, 255, 255, 0.5);
 .login-form {
   flex-direction: column;
   display: flex;
@@ -16,7 +15,7 @@
     }
   }
 
-  img {
+  .logo {
       width: 300px;
       height: auto;
   }
