change class name of logo and add new field in create account form

--- a/src/app/shared/components/create-account-form/create-account-form.component.scss
+++ b/src/app/shared/components/create-account-form/create-account-form.component.scss
@@ -1,6 +1,13 @@
 @import "../../../../themes/generated/variables.base.scss";
 
 .create-account-form {
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  .logo {
+    width: 300px;
+    height: auto;
+}
   .policy-info {
     margin: 10px 0;
     color: rgba($base-text-color, alpha($base-text-color) * 0.7);
