--- a/src/app/shared/components/create-account-form/create-account-form.component.html
+++ b/src/app/shared/components/create-account-form/create-account-form.component.html
@@ -1,5 +1,13 @@
 <form class="create-account-form" (submit)="onSubmit($event)">
+  <img src="assets/images/logosembg.png" alt="Logo" class="logo">
   <dx-form [formData]="formData" [disabled]="loading">
+
+    <dxi-item dataField="name" editorType="dxTextBox"
+    [editorOptions]="{ stylingMode: 'filled', placeholder: 'Nome', mode: 'name' }">
+    <dxi-validation-rule type="required" message="Nome é obrigatorio"></dxi-validation-rule>
+    <dxo-label [visible]="false"></dxo-label>
+  </dxi-item>
+
 
     <dxi-item dataField="email" editorType="dxTextBox"
       [editorOptions]="{ stylingMode: 'filled', placeholder: 'Email', mode: 'email' }">
