change class name of logo

--- a/src/app/shared/components/reset-password-form/reset-password-form.component.html
+++ b/src/app/shared/components/reset-password-form/reset-password-form.component.html
@@ -1,4 +1,5 @@
 <form class="reset-password-form" (submit)="onSubmit($event)">
+  <img src="assets/images/logosembg.png" alt="Logo" class="logo">
   <dx-form [formData]="formData" [disabled]="loading">
 
     <dxi-item dataField="email" editorType="dxTextBox"
