--- a/src/app/shared/components/reset-password-form/reset-password-form.component.scss
+++ b/src/app/shared/components/reset-password-form/reset-password-form.component.scss
@@ -1,6 +1,13 @@
 @import "../../../../themes/generated/variables.base.scss";
 
 .reset-password-form {
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  .logo {
+    width: 300px;
+    height: auto;
+}
   ::ng-deep .submit-button {
     margin-top: 10px;
   }
