--- a/src/app/shared/components/side-navigation-menu/side-navigation-menu.component.scss
+++ b/src/app/shared/components/side-navigation-menu/side-navigation-menu.component.scss
@@ -15,7 +15,8 @@
 
     ::ng-deep .dx-treeview {
       // ## Long text positioning
-      white-space: nowrap;
+      white-space: normal;
+      width: 100%;
       // ##
 
       // ## Icon width customization
