--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,17 +1,26 @@
 @import "../../../../themes/generated/variables.base.scss";
 @import "../../../../dx-styles.scss";
-
+.header-toolbar {
+  background-color: #ff5722;
+}
 :host {
   flex: 0 0 auto;
   z-index: 1;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
-  ::ng-deep .dx-toolbar .dx-toolbar-item.menu-button>.dx-toolbar-item-content .dx-icon {
-    color: $base-accent;
+  ::ng-deep
+    .dx-toolbar
+    .dx-toolbar-item.menu-button
+    > .dx-toolbar-item-content
+    .dx-icon {
+    color: white;
   }
 }
 
-::ng-deep .dx-toolbar.header-toolbar .dx-toolbar-items-container .dx-toolbar-after {
+::ng-deep
+  .dx-toolbar.header-toolbar
+  .dx-toolbar-items-container
+  .dx-toolbar-after {
   padding: 0 40px;
 
   :host-context(.screen-x-small) & {
@@ -35,7 +44,7 @@
     padding: 10px 0;
   }
 
-  .user-button>.dx-button-content {
+  .user-button > .dx-button-content {
     padding: 3px;
   }
 }
