--- a/src/app/shared/components/login-form/login-form.component.html
+++ b/src/app/shared/components/login-form/login-form.component.html
@@ -1,26 +1,53 @@
 <form class="login-form" (submit)="onSubmit($event)">
-  <img src="assets/images/logosembg.png" alt="Logo" class="logo">
+  <img src="assets/images/logosembg.png" alt="Logo" class="logo" />
   <dx-form [formData]="formData" [disabled]="loading">
-
-    <dxi-item dataField="email" editorType="dxTextBox"
-      [editorOptions]="{ stylingMode: 'filled', placeholder: 'Email', mode: '' }">
-      <dxi-validation-rule type="required" message="Email is required"></dxi-validation-rule>
+    <dxi-item
+      dataField="email"
+      editorType="dxTextBox"
+      [editorOptions]="{
+        stylingMode: 'filled',
+        placeholder: 'Email',
+        mode: ''
+      }"
+    >
+      <dxi-validation-rule
+        type="required"
+        message="Email is required"
+      ></dxi-validation-rule>
       <dxo-label [visible]="false"></dxo-label>
     </dxi-item>
 
-    <dxi-item dataField="password" editorType="dxTextBox"
-      [editorOptions]="{ stylingMode: 'filled', placeholder: 'Password', mode: 'password' }">
-      <dxi-validation-rule type="required" message="Password is required"></dxi-validation-rule>
+    <dxi-item
+      dataField="password"
+      editorType="dxTextBox"
+      name="password"
+      [editorOptions]="passwordEditorOptions"
+    >
+      <dxi-validation-rule
+        type="required"
+        message="Password is required"
+      ></dxi-validation-rule>
       <dxo-label [visible]="false"></dxo-label>
     </dxi-item>
 
-    <dxi-item dataField="rememberMe" editorType="dxCheckBox"
-      [editorOptions]="{ text: 'Remember me', elementAttr: { class: 'form-text' } }">
+    <dxi-item
+      dataField="rememberMe"
+      editorType="dxCheckBox"
+      [editorOptions]="{
+        text: 'Remember me',
+        elementAttr: { class: 'form-text' }
+      }"
+    >
       <dxo-label [visible]="false"></dxo-label>
     </dxi-item>
 
     <dxi-item itemType="button">
-      <dxo-button-options width="100%" type="default" [useSubmitBehavior]="true" [template]="'signInTemplate'">
+      <dxo-button-options
+        width="100%"
+        type="default"
+        [useSubmitBehavior]="true"
+        [template]="'signInTemplate'"
+      >
       </dxo-button-options>
     </dxi-item>
 
@@ -31,19 +58,26 @@
     </dxi-item>
 
     <dxi-item itemType="button">
-      <dxo-button-options text="Create an account" width="100%" [onClick]="onCreateAccountClick"></dxo-button-options>
+      <dxo-button-options
+        text="Create an account"
+        width="100%"
+        [onClick]="onCreateAccountClick"
+      ></dxo-button-options>
     </dxi-item>
 
     <ng-container *dxTemplate="let item of 'signInTemplate'">
       <div>
         <span class="dx-button-text">
           <ng-container *ngIf="loading; else notLoading">
-            <dx-load-indicator width="24px" height="24px" [visible]="true"></dx-load-indicator>
+            <dx-load-indicator
+              width="24px"
+              height="24px"
+              [visible]="true"
+            ></dx-load-indicator>
           </ng-container>
           <ng-template #notLoading>Sign In</ng-template>
         </span>
       </div>
     </ng-container>
-
   </dx-form>
 </form>
